<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFirebaseContact">

    <EditText
        android:id="@+id/et_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="12"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/my_local_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_edit_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_marginTop="16dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColorHint="@color/my_local_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_edit_name" />

    <Button
        android:id="@+id/edit_contact_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:text="@string/edit_contact"
        android:textAllCaps="false"
        app:backgroundTint="@color/my_local_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_phone_number"
        app:layout_constraintVertical_bias="0.019" />

</androidx.constraintlayout.widget.ConstraintLayout>